-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 16
-
Component/s: hotspot
-
b30
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8258639 | 17 | Markus Grönlund | P3 | Resolved | Fixed | b03 |
| JDK-8268258 | 15.0.4 | Ekaterina Vergizova | P3 | Resolved | Fixed | b04 |
| JDK-8302592 | 11.0.20-oracle | Joakim Nordström | P3 | Resolved | Fixed | b01 |
| JDK-8263882 | 11.0.12 | Roman Kennke | P3 | Resolved | Fixed | b01 |
Following is a minimal reproducer for the issue. When examining the produced .jfr files, you'll find the first contains events with the string associated correctly from the constant pool, while the second contains events with N/A for the string value and the constant pool has no entries for Strings.
TestConsecutiveRecording.java
import jdk.jfr.Description;
import jdk.jfr.Event;
import jdk.jfr.Label;
import jdk.jfr.Recording;
import java.io.File;
import java.io.IOException;
import java.nio.file.Path;
public class TestConsecutiveRecording {
@Label("String Event")
@Description("An event with a string payload")
public static class StringEvent extends Event {
@Label("Message")
public String message;
}
public static void main(String[] args) throws IOException {
String name = "One";
Recording r = new Recording();
Path destination = File.createTempFile(name, ".jfr").toPath();
r.setDestination(destination);
r.start();
for (int i = 0; i < 2; i++) {
StringEvent event = new StringEvent();
event.message = "Event has been generated!";
event.commit();
}
r.stop();
r.close();
name = "Two";
r = new Recording();
r.start();
for (int i = 0; i < 2; i++) {
StringEvent event = new StringEvent();
event.message = "Event has been generated!";
event.commit();
}
r.stop();
destination = File.createTempFile(name, ".jfr").toPath();
r.dump(destination);
r.close();
}
}
- backported by
-
JDK-8258639 JFR StringPool misses cached items across consecutive recordings
-
- Resolved
-
-
JDK-8263882 JFR StringPool misses cached items across consecutive recordings
-
- Resolved
-
-
JDK-8268258 JFR StringPool misses cached items across consecutive recordings
-
- Resolved
-
-
JDK-8302592 JFR StringPool misses cached items across consecutive recordings
-
- Resolved
-
- blocks
-
JDK-8300990 Move jdk.X509Certificate event logic to JCA layer
-
- Resolved
-
- duplicates
-
JDK-8256482 jdk/jfr/api/recording/event/TestReEnableName.java fails with "RuntimeException: Too few events found: expected 0 >= 5"
-
- Closed
-
- links to
-
Commit
openjdk/jdk15u-dev/9691c4e8
-
Commit
openjdk/jdk16/7aac4dc1
-
Review
openjdk/jdk15u-dev/69
-
Review
openjdk/jdk16/18
-
Review
openjdk/jdk/1576