8257621: JFR StringPool misses cached items across consecutive recordings

Reviewed-by: egahlin