src/hotspot/share/jfr/recorder/stringpool/jfrStringPool.cpp
@@ -128,16 +128,13 @@ BufferPtr JfrStringPool::lease_buffer(Thread* thread, size_t size /* 0 */) {
   return buffer;
 }
 
-bool JfrStringPool::add(bool epoch, jlong id, jstring string, JavaThread* jt) {
+jboolean JfrStringPool::add(jlong id, jstring string, JavaThread* jt) {
   assert(jt != NULL, "invariant");
-  const bool current_epoch = JfrTraceIdEpoch::epoch();
-  if (current_epoch == epoch) {
-    JfrStringPoolWriter writer(jt);
-    writer.write(id);
-    writer.write(string);
-    writer.inc_nof_strings();
-  }
-  return current_epoch;
+  JfrStringPoolWriter writer(jt);
+  writer.write(id);
+  writer.write(string);
+  writer.inc_nof_strings();
+  return JNI_TRUE;
 }
 
 template <template <typename> class Operation>
@@ -189,11 +186,6 @@ size_t JfrStringPool::write() {
   assert(_free_list_mspace->is_full_empty(), "invariant");
   process_free_list(spwo, _free_list_mspace);
   return wo.processed();
-}
-
-size_t JfrStringPool::write_at_safepoint() {
-  assert(SafepointSynchronize::is_at_safepoint(), "invariant");
-  return write();
 }
 
 size_t JfrStringPool::clear() {
