src/jdk.jfr/share/classes/jdk/jfr/internal/EventWriter.java
@@ -222,6 +222,10 @@ public final class EventWriter {
         notified = false;
     }
 
+    private void resetStringPool() {
+        StringPool.reset();
+    }
+
     private int usedSize() {
         return (int) (currentPosition - startPosition);
     }
@@ -273,6 +277,7 @@ public final class EventWriter {
 
         if (isNotified()) {
             resetNotified();
+            resetStringPool();
             reset();
             // returning false will trigger restart of the event write attempt
             return false;
